--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div id="page-content" class="row">
 
-            <h2>Geolocator v2 Examples 2</h2>
+            <h2>Geolocator v2 Examples 2 111</h2>
             <hr />
 
             Below is just a demonstration of some Geolocator features.
